--- a/codefresh/applicationset/octopub-test-kustomize.yaml
+++ b/codefresh/applicationset/octopub-test-kustomize.yaml
@@ -15,6 +15,8 @@ spec:
   template:
     metadata:
       name: '{{cluster}}-octopub-test'
+      annotations:
+        codefresh.io/product: octopub
     spec:
       project: default
       sources:
