--- a/github/js-frontend/action.yaml
+++ b/github/js-frontend/action.yaml
@@ -116,7 +116,7 @@ runs:
 
         # # Name of Jira integration
         # # Name of Jira integration
-        CF_ISSUE_TRACKING_INTEGRATION: 'jira-shawn-sesna' 
+        CF_ISSUE_TRACKING_INTEGRATION: 'twerthi-jira' 
 
         # # String starting with the issue ID to associate with image
         CF_JIRA_MESSAGE: 'OC-1'
