--- a/github/java-microservice/action.yaml
+++ b/github/java-microservice/action.yaml
@@ -88,6 +88,14 @@ runs:
         distribution: adopt
         cache: 'maven'
 
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v3
+      with:
+        platforms: linux/amd64,linux/arm64
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+
     - name: Login to DockerHub
       if: ${{ inputs.docker_build == 'true' }}
       uses: docker/login-action@v2
@@ -146,16 +154,24 @@ runs:
       shell: bash
       working-directory: java/${{ inputs.service_directory }}
 
-     # The MySQL Docker image is built and pushed.
+    # The MySQL Docker image is built and pushed.
     - name: Build, tag, and push image to Dockerhub
       if: ${{ inputs.docker_build == 'true' }}
       run: |
-        docker build -f src/main/docker/Dockerfile.legacy-jar -t twerthi/octopub-${{ inputs.service_directory }}-mysql:${{ steps.determine_version.outputs.semVer }} .
-        docker push twerthi/octopub-${{ inputs.service_directory }}-mysql:${{ steps.determine_version.outputs.semVer }}
-        docker tag  twerthi/octopub-${{ inputs.service_directory }}-mysql:${{ steps.determine_version.outputs.semVer }} twerthi/octopub-${{ inputs.service_directory }}-mysql:latest
-        docker push twerthi/octopub-${{ inputs.service_directory }}-mysql:latest
+        docker buildx build -f src/main/docker/Dockerfile.legacy-jar -t twerthi/octopub-${{ inputs.service_directory }}-mysql:${{ steps.determine_version.outputs.semVer }} -t twerthi/octopub-${{ inputs.service_directory }}-mysql:latest --platform=linux/amd64,linux/arm64 --push .
       shell: bash
       working-directory: java/${{ inputs.service_directory }}
+
+     # The MySQL Docker image is built and pushed.
+    # - name: Build, tag, and push image to Dockerhub
+    #   if: ${{ inputs.docker_build == 'true' }}
+    #   run: |
+    #     docker build -f src/main/docker/Dockerfile.legacy-jar -t twerthi/octopub-${{ inputs.service_directory }}-mysql:${{ steps.determine_version.outputs.semVer }} .
+    #     docker push twerthi/octopub-${{ inputs.service_directory }}-mysql:${{ steps.determine_version.outputs.semVer }}
+    #     docker tag  twerthi/octopub-${{ inputs.service_directory }}-mysql:${{ steps.determine_version.outputs.semVer }} twerthi/octopub-${{ inputs.service_directory }}-mysql:latest
+    #     docker push twerthi/octopub-${{ inputs.service_directory }}-mysql:latest
+    #   shell: bash
+    #   working-directory: java/${{ inputs.service_directory }}
 
     - name: report image by action
       with:
