--- a/github/js-frontend/action.yaml
+++ b/github/js-frontend/action.yaml
@@ -20,6 +20,14 @@ inputs:
 runs:
   using: "composite"
   steps:
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v3
+      with:
+        platforms: linux/amd64,linux/arm64
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+
     - name: Login to DockerHub
       uses: docker/login-action@v2
       with:
@@ -77,13 +85,20 @@ runs:
       shell: bash
       working-directory: js/frontend
 
-    # The Docker image is built and pushed.
+    # # The Docker image is built and pushed.
+    # - name: Build, tag, and push image to Dockerhub
+    #   run: |
+    #     docker build -t twerthi/octopub-frontend:${{ steps.determine_version.outputs.semVer }} .
+    #     docker push twerthi/octopub-frontend:${{ steps.determine_version.outputs.semVer }}
+    #     docker tag  twerthi/octopub-frontend:${{ steps.determine_version.outputs.semVer }} twerthi/octopub-frontend:latest
+    #     docker push twerthi/octopub-frontend:latest
+    #   shell: bash
+    #   working-directory: js/frontend
+
+    # The MySQL Docker image is built and pushed.
     - name: Build, tag, and push image to Dockerhub
       run: |
-        docker build -t twerthi/octopub-frontend:${{ steps.determine_version.outputs.semVer }} .
-        docker push twerthi/octopub-frontend:${{ steps.determine_version.outputs.semVer }}
-        docker tag  twerthi/octopub-frontend:${{ steps.determine_version.outputs.semVer }} twerthi/octopub-frontend:latest
-        docker push twerthi/octopub-frontend:latest
+        docker buildx build -f Dockerfile -t twerthi/octopub-frontend:${{ steps.determine_version.outputs.semVer }} -t twerthi/octopub-frontend:latest --platform=linux/amd64,linux/arm64 --push .
       shell: bash
       working-directory: js/frontend
 
