--- a/github/java-microservice/action.yaml
+++ b/github/java-microservice/action.yaml
@@ -154,24 +154,24 @@ runs:
       shell: bash
       working-directory: java/${{ inputs.service_directory }}
 
-    # The MySQL Docker image is built and pushed.
-    - name: Build, tag, and push image to Dockerhub
-      if: ${{ inputs.docker_build == 'true' }}
-      run: |
-        docker buildx build -f src/main/docker/Dockerfile.legacy-jar -t twerthi/octopub-${{ inputs.service_directory }}-mysql:${{ steps.determine_version.outputs.semVer }} -t twerthi/octopub-${{ inputs.service_directory }}-mysql:latest --platform=linux/amd64,linux/arm64 --push .
-      shell: bash
-      working-directory: java/${{ inputs.service_directory }}
-
-     # The MySQL Docker image is built and pushed.
+    # # The MySQL Docker multi-arch image is built and pushed.
     # - name: Build, tag, and push image to Dockerhub
     #   if: ${{ inputs.docker_build == 'true' }}
     #   run: |
-    #     docker build -f src/main/docker/Dockerfile.legacy-jar -t twerthi/octopub-${{ inputs.service_directory }}-mysql:${{ steps.determine_version.outputs.semVer }} .
-    #     docker push twerthi/octopub-${{ inputs.service_directory }}-mysql:${{ steps.determine_version.outputs.semVer }}
-    #     docker tag  twerthi/octopub-${{ inputs.service_directory }}-mysql:${{ steps.determine_version.outputs.semVer }} twerthi/octopub-${{ inputs.service_directory }}-mysql:latest
-    #     docker push twerthi/octopub-${{ inputs.service_directory }}-mysql:latest
+    #     docker buildx build -f src/main/docker/Dockerfile.legacy-jar -t twerthi/octopub-${{ inputs.service_directory }}-mysql:${{ steps.determine_version.outputs.semVer }} -t twerthi/octopub-${{ inputs.service_directory }}-mysql:latest --platform=linux/amd64,linux/arm64 --push .
     #   shell: bash
     #   working-directory: java/${{ inputs.service_directory }}
+
+     # The MySQL Docker image is built and pushed.
+    - name: Build, tag, and push image to Dockerhub
+      if: ${{ inputs.docker_build == 'true' }}
+      run: |
+        docker build -f src/main/docker/Dockerfile.legacy-jar -t twerthi/octopub-${{ inputs.service_directory }}-mysql:${{ steps.determine_version.outputs.semVer }} .
+        docker push twerthi/octopub-${{ inputs.service_directory }}-mysql:${{ steps.determine_version.outputs.semVer }}
+        docker tag  twerthi/octopub-${{ inputs.service_directory }}-mysql:${{ steps.determine_version.outputs.semVer }} twerthi/octopub-${{ inputs.service_directory }}-mysql:latest
+        docker push twerthi/octopub-${{ inputs.service_directory }}-mysql:latest
+      shell: bash
+      working-directory: java/${{ inputs.service_directory }}
 
     - name: report image by action
       with:
