--- a/codefresh/helm/octopub-audits-mysql/test/values.yaml
+++ b/codefresh/helm/octopub-audits-mysql/test/values.yaml
@@ -8,7 +8,7 @@ image:
   repository: octopussamples/octopub-audit-microservice-mysql
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: 0.2.36-add-multi-arch.31
+  tag: 2024.10.17.14
 
 database:
   hostname: 192.168.1.64
