--- a/codefresh/application/helm/octopub-test-helm-audit.yaml
+++ b/codefresh/application/helm/octopub-test-helm-audit.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: octopub-test
+  name: octopub-audit-test
   annotations:
     codefresh.io/product: octopub
 spec:
@@ -12,17 +12,14 @@ spec:
       path: codefresh/helm/octopub-audits-mysql/test
     - repoURL: https://github.com/twerthi/octopub.git
       targetRevision: HEAD
-      path: codefresh/helm/octopub-products-mysql/test
-    - repoURL: https://github.com/twerthi/octopub.git
-      targetRevision: HEAD
-      path: codefresh/helm/octopub-frontend/test
-    - repoURL: https://github.com/twerthi/octopub.git
-      targetRevision: HEAD
-      path: codefresh/helm/octopub-secret/Test          
+      path: codefresh/helm/octopub-secret/test          
   destination:
     server: https://kubernetes.default.svc
     namespace: cf-test
   syncPolicy:
+    automated:  
+      prune: true
+      selfHeal: true
     syncOptions:
     - Validate=false
     - CreateNamespace=true
