Separating for product usage

--- a/codefresh/application/helm/octopub-development-helm-product.yaml
+++ b/codefresh/application/helm/octopub-development-helm-product.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: octopub-development
+  name: octopub-product-development
   annotations:
     codefresh.io/product: octopub
 spec:
