--- a/manifests/octopub-database-secret.yaml
+++ b/manifests/octopub-database-secret.yaml
@@ -4,5 +4,5 @@ metadata:
   name: database-credentials
 type: Opaque
 stringData:
-  database-password: "#{TestPassword}"
+  database-password: "YourPasswordHere!!"
   database-user: "root"
