Updating product names for individual components

--- a/codefresh/application/helm/octopub-development-helm-product.yaml
+++ b/codefresh/application/helm/octopub-development-helm-product.yaml
@@ -3,7 +3,7 @@ kind: Application
 metadata:
   name: octopub-product-development
   annotations:
-    codefresh.io/product: octopub
+    codefresh.io/product: octopub-produt
 spec:
   project: default
   sources:
