--- a/codefresh/application/helm/octopub-production-helm-audit.yaml
+++ b/codefresh/application/helm/octopub-production-helm-audit.yaml
@@ -3,7 +3,7 @@ kind: Application
 metadata:
   name: octopub-audit-production
   annotations:
-    codefresh.io/product: octopub
+    codefresh.io/product: octopub-audit
 spec:
   project: default
   sources:
