--- a/codefresh/application/helm/octopub-development-helm-frontend.yaml
+++ b/codefresh/application/helm/octopub-development-helm-frontend.yaml
@@ -3,7 +3,7 @@ kind: Application
 metadata:
   name: octopub-frontend-development
   annotations:
-    codefresh.io/product: octopub
+    codefresh.io/product: octopub-frontend
 spec:
   project: default
   sources:
