--- a/codefresh/helm/octopub-frontend/test/values.yaml
+++ b/codefresh/helm/octopub-frontend/test/values.yaml
@@ -21,7 +21,7 @@ image:
   repository: octopussamples/octopub-frontend
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: 2024.10.18.363
+  tag: "2024.11.26.371"
 
 network:
   port: 8080
@@ -41,10 +41,10 @@ serviceAccount:
 
 podAnnotations: {}
 
-podSecurityContext: {} # fsGroup: 2000
+podSecurityContext: {}
+  # fsGroup: 2000
 
-securityContext:
-  {}
+securityContext: {}
   # capabilities:
   #   drop:
   #   - ALL
@@ -63,23 +63,21 @@ service:
 
 ingress:
   enabled: true
-  #  className: ""
-  annotations:
-    {}
+#  className: ""
+  annotations: {}
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
-    - host: octopub-clusterpi.test.octopusdemos.com
+    - host: octopub-clusterpi.development.octopusdemos.com
       paths:
-        - path: /
-          pathType: Prefix
+      - path: /
+        pathType: Prefix
   tls: []
   #  - secretName: chart-example-tls
   #    hosts:
   #      - chart-example.local
 
-resources:
-  {}
+resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
   # choice for the user. This also increases chances charts run on environments with little
   # resources, such as Minikube. If you do want to specify resources, uncomment the following
