--- a/helm/octopub-audits-mysql/values.yaml
+++ b/helm/octopub-audits-mysql/values.yaml
@@ -2,7 +2,7 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
-replicaCount: 1
+replicaCount: #{Project.Replica.Count}
 
 image:
   repository: octopussamples/octopub-audit-microservice-mysql
