--- a/helm/octopub-audits-mysql/values.yaml
+++ b/helm/octopub-audits-mysql/values.yaml
@@ -88,7 +88,7 @@ resources: {}
   #   memory: 128Mi
 
 autoscaling:
-  enabled: #{Project.Replica.Count}
+  enabled: #{Project.Replicas.Count}
   minReplicas: 1
   maxReplicas: 1
   targetCPUUtilizationPercentage: 80
