--- a/.github/workflows/octopub-products.yaml
+++ b/.github/workflows/octopub-products.yaml
@@ -11,7 +11,7 @@ on:
 jobs:
   build:
     #runs-on: ubuntu-latest
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
         with:
