--- a/github/js-frontend/action.yaml
+++ b/github/js-frontend/action.yaml
@@ -140,12 +140,12 @@ runs:
         CF_JIRA_PROJECT_PREFIX: "OC"
       uses: codefresh-io/codefresh-report-image@latest
 
-    - name: Push build information to Octopus Deploy 🐙
-      uses: OctopusDeploy/push-build-information-action@v3
-      with:
-        packages: |
-          twerthi/octopub-frontend
-        version: ${{ steps.determine_version.outputs.semVer }}
-        server: ${{ inputs.octopus_server_url }}
-        api_Key: ${{ inputs.octopus_api_key }}
-        space: ${{ inputs.octopus_space }}      
+    # - name: Push build information to Octopus Deploy 🐙
+    #   uses: OctopusDeploy/push-build-information-action@v3
+    #   with:
+    #     packages: |
+    #       twerthi/octopub-frontend
+    #     version: ${{ steps.determine_version.outputs.semVer }}
+    #     server: ${{ inputs.octopus_server_url }}
+    #     api_Key: ${{ inputs.octopus_api_key }}
+    #     space: ${{ inputs.octopus_space }}      
