Fixing build definitions

--- a/github/js-frontend/action.yaml
+++ b/github/js-frontend/action.yaml
@@ -52,11 +52,17 @@ runs:
       with:
         versionSpec: 5.x
 
-    - id: determine_version
-      name: Determine Version
-      uses: gittools/actions/gitversion/execute@v0.9.15
-      with:
-        additionalArguments: /overrideconfig mode=Mainline
+    # - id: determine_version
+    #   name: Determine Version
+    #   uses: gittools/actions/gitversion/execute@v0.9.15
+    #   with:
+    #     additionalArguments: /overrideconfig mode=Mainline
+
+    - name: Set Version
+      run: echo "PACKAGE_VERSION=$(date +'%Y.%m.%d').$GITHUB_RUN_NUMBER" >> $GITHUB_ENV
+      shell: bash
+
+
     - name: Install modules
       run: yarn install
       shell: bash
@@ -73,12 +79,12 @@ runs:
       shell: bash
       working-directory: js/frontend
 
-    - name: Set version
-      run: |
-        jq '.frontendVersion = "v${{ steps.determine_version.outputs.semVer }}"' config.json > /tmp/config.json
-        mv /tmp/config.json config.json
-      shell: bash
-      working-directory: js/frontend/public
+    # - name: Set version
+    #   run: |
+    #     jq '.frontendVersion = "v${{ steps.determine_version.outputs.semVer }}"' config.json > /tmp/config.json
+    #     mv /tmp/config.json config.json
+    #   shell: bash
+    #   working-directory: js/frontend/public
 
     - name: Build App
       run: yarn run build
@@ -98,7 +104,7 @@ runs:
     # The MySQL Docker image is built and pushed.
     - name: Build, tag, and push image to Dockerhub
       run: |
-        docker buildx build -f Dockerfile -t twerthi/octopub-frontend:${{ steps.determine_version.outputs.semVer }} -t twerthi/octopub-frontend:latest --platform=linux/arm64 --push .
+        docker buildx build -f Dockerfile -t twerthi/octopub-frontend:${{ env.PACKAGE_VERSION }} -t twerthi/octopub-frontend:latest --platform=linux/arm64 --push .
       shell: bash
       working-directory: js/frontend
 
@@ -123,7 +129,7 @@ runs:
         CF_GIT_BRANCH: ${{ github.ref_name }}
 
         # Image path to enrich 
-        CF_IMAGE: docker.io/${{ inputs.dockerhub_username }}/octopub-frontend:${{ steps.determine_version.outputs.semVer }}
+        CF_IMAGE: docker.io/${{ inputs.dockerhub_username }}/octopub-frontend:${{ env.PACKAGE_VERSION }}
 
         # GitHub Access token !! Committing a plain text token is a security risk. We highly recommend using encrypted secrets. !!
         # Documentation - https://docs.github.com/en/actions/security-guides/encrypted-secrets
