--- a/github/java-microservice/action.yaml
+++ b/github/java-microservice/action.yaml
@@ -75,11 +75,16 @@ runs:
       with:
         versionSpec: 5.x
 
-    - id: determine_version
-      name: Determine Version
-      uses: gittools/actions/gitversion/execute@v0.9.15
-      with:
-        additionalArguments: /overrideconfig mode=Mainline
+    # - id: determine_version
+    #   name: Determine Version
+    #   uses: gittools/actions/gitversion/execute@v0.9.15
+    #   with:
+    #     additionalArguments: /overrideconfig mode=Mainline
+
+    - name: Set Version
+      run: echo "PACKAGE_VERSION=$(date +'%Y.%m.%d').$GITHUB_RUN_NUMBER" >> $GITHUB_ENV
+      shell: bash
+
 
     - name: Set up JDK 1.17
       uses: actions/setup-java@v3
@@ -158,7 +163,7 @@ runs:
     - name: Build, tag, and push image to Dockerhub
       if: ${{ inputs.docker_build == 'true' }}
       run: |
-        docker buildx build -f src/main/docker/Dockerfile.legacy-jar -t twerthi/octopub-${{ inputs.service_directory }}-mysql:${{ steps.determine_version.outputs.semVer }} -t twerthi/octopub-${{ inputs.service_directory }}-mysql:latest --platform=linux/arm64 --push .
+        docker buildx build -f src/main/docker/Dockerfile.legacy-jar -t twerthi/octopub-${{ inputs.service_directory }}-mysql:${{ env.PACKAGE_VERSION }} -t twerthi/octopub-${{ inputs.service_directory }}-mysql:latest --platform=linux/arm64 --push .
       shell: bash
       working-directory: java/${{ inputs.service_directory }}
 
@@ -189,7 +194,7 @@ runs:
         CF_GIT_BRANCH: ${{ github.ref_name }}
 
         # Image path to enrich 
-        CF_IMAGE: docker.io/${{ inputs.dockerhub_username }}/octopub-${{ inputs.service_directory }}-mysql:${{ steps.determine_version.outputs.semVer }}
+        CF_IMAGE: docker.io/${{ inputs.dockerhub_username }}/octopub-${{ inputs.service_directory }}-mysql:${{ env.PACKAGE_VERSION }}
 
         # GitHub Access token !! Committing a plain text token is a security risk. We highly recommend using encrypted secrets. !!
         # Documentation - https://docs.github.com/en/actions/security-guides/encrypted-secrets
