--- a/github/js-frontend/action.yaml
+++ b/github/js-frontend/action.yaml
@@ -26,7 +26,7 @@ runs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
       with:
-        platforms: linux/amd64,linux/arm64
+        platforms: linux/arm64
 
     - name: Login to DockerHub
       uses: docker/login-action@v2
