--- a/codefresh/helm/octopub-audits-mysql/test/values.yaml
+++ b/codefresh/helm/octopub-audits-mysql/test/values.yaml
@@ -8,14 +8,14 @@ image:
   repository: octopussamples/octopub-audit-microservice-mysql
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "2024.11.26.368"
+  tag: 2024.12.18.34
 
 database:
   hostname: 192.168.1.64
   port: 30000
   name: octopub_codefresh_development
-#  username: root
-#  password: password
+  #  username: root
+  #  password: password
   migrateOnStartup: true
 
 application:
@@ -39,10 +39,10 @@ serviceAccount:
 
 podAnnotations: {}
 
-podSecurityContext: {}
-  # fsGroup: 2000
+podSecurityContext: {} # fsGroup: 2000
 
-securityContext: {}
+securityContext:
+  {}
   # capabilities:
   #   drop:
   #   - ALL
@@ -61,8 +61,9 @@ service:
 
 ingress:
   enabled: true
-#  className: ""
-  annotations: {}
+  #  className: ""
+  annotations:
+    {}
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
@@ -75,7 +76,8 @@ ingress:
   #    hosts:
   #      - chart-example.local
 
-resources: {}
+resources:
+  {}
   # We usually recommend not to specify default resources and to leave this as a conscious
   # choice for the user. This also increases chances charts run on environments with little
   # resources, such as Minikube. If you do want to specify resources, uncomment the following
