--- a/github/js-frontend/action.yaml
+++ b/github/js-frontend/action.yaml
@@ -140,7 +140,7 @@ runs:
         CF_ISSUE_TRACKING_INTEGRATION: 'twerthi-jira' 
 
         # # String starting with the issue ID to associate with image
-        CF_JIRA_MESSAGE: 'OC-'
+        CF_JIRA_MESSAGE: 'OC-*'
 
         # # Jira project filter
         CF_JIRA_PROJECT_PREFIX: "OC"
