--- a/github/js-frontend/action.yaml
+++ b/github/js-frontend/action.yaml
@@ -151,7 +151,7 @@ runs:
     #   with:
     #     packages: |
     #       twerthi/octopub-frontend
-    #     version: ${{ steps.determine_version.outputs.semVer }}
+    #     version: ${{ env.PACKAGE_VERSION  }}
     #     server: ${{ inputs.octopus_server_url }}
     #     api_Key: ${{ inputs.octopus_api_key }}
     #     space: ${{ inputs.octopus_space }}      
