--- a/codefresh/helm/octopub-products-mysql/test/values.yaml
+++ b/codefresh/helm/octopub-products-mysql/test/values.yaml
@@ -12,8 +12,8 @@ image:
 
 database:
   hostname: 192.168.1.64
-  port: 30000
-  name: octopub_codefresh_development
+  port: 30001
+  name: octopub_codefresh_test
   #  username: root
   #  password: password
   migrateOnStartup: true
@@ -64,7 +64,7 @@ ingress:
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
-    - host: octopub-clusterpi.development.octopusdemos.com
+    - host: octopub-clusterpi.test.octopusdemos.com
       paths:
         - path: /api/products
           pathType: Prefix
