--- a/codefresh/helm/octopub-products-mysql/development/values.yaml
+++ b/codefresh/helm/octopub-products-mysql/development/values.yaml
@@ -13,7 +13,7 @@ image:
 database:
   hostname: 192.168.1.64
   port: 30000
-  name: octopub_codefresh_production
+  name: octopub_codefresh_development
 #  username: root
 #  password: password
   migrateOnStartup: true
@@ -63,7 +63,7 @@ ingress:
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
-    - host:  octopub-clusterpi.octopusdemos.com
+    - host:  octopub-clusterpi.development.octopusdemos.com
       paths:
         - path: /api/products
           pathType: Prefix
