--- a/codefresh/helm/octopub-audits-mysql/development/values.yaml
+++ b/codefresh/helm/octopub-audits-mysql/development/values.yaml
@@ -5,10 +5,10 @@
 replicaCount: 1
 
 image:
-  repository: twerthi/octopub-audit-microservice-mysql
+  repository: octopussamples/octopub-audit-microservice-mysql
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "2024.12.19.35"
+  tag: "20250122.381.1"
 
 database:
   hostname: 192.168.1.64
