--- a/codefresh/helm/octopub-audits-mysql/development/values.yaml
+++ b/codefresh/helm/octopub-audits-mysql/development/values.yaml
@@ -8,7 +8,7 @@ image:
   repository: octopussamples/octopub-audit-microservice-mysql
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "20250122.381.1"
+  tag: "2024.12.19.35"
 
 database:
   hostname: 192.168.1.64
