--- a/codefresh/local-controlplane/octopub-products/test/templates/deployment.yaml
+++ b/codefresh/local-controlplane/octopub-products/test/templates/deployment.yaml
@@ -35,22 +35,8 @@ spec:
             {{- toYaml .Values.securityContext | nindent 12 }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           env:
-            - name: DATABASE_HOSTNAME
-              value: {{ .Values.database.hostname }}
-            - name: DATABASE_PORT
-              value: !!str {{ .Values.database.port }}
-            - name: DATABASE_NAME
-              value: {{ .Values.database.name }}
-            - name: DATABASE_USERNAME
-              valueFrom:
-                secretKeyRef:
-                  name: database-credentials
-                  key: database-user
-            - name: DATABASE_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: database-credentials
-                  key: database-password
+            - name: COGNITO_DISABLE_AUTH
+              value: !!str {{ .Values.application.disableAuth }}
             - name: MIGRATE_AT_START
               value: !!str {{ .Values.database.migrateOnStartup }}
           imagePullPolicy: {{ .Values.image.pullPolicy }}
