--- a/codefresh/helm/octopub-products-mysql/production/values.yaml
+++ b/codefresh/helm/octopub-products-mysql/production/values.yaml
@@ -5,17 +5,17 @@
 replicaCount: 1
 
 image:
-  repository: octopussamples/octopub-products-microservice-mysql
+  repository: twerthi/octopub-products-microservice-mysql
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "2024.11.25.373"
+  tag: 2025.04.02.24
 
 database:
   hostname: 192.168.1.64
   port: 30002
   name: octopub_codefresh_production
-#  username: root
-#  password: password
+  #  username: root
+  #  password: password
   migrateOnStartup: true
 
 network:
@@ -36,10 +36,10 @@ serviceAccount:
 
 podAnnotations: {}
 
-podSecurityContext: {}
-  # fsGroup: 2000
+podSecurityContext: {} # fsGroup: 2000
 
-securityContext: {}
+securityContext:
+  {}
   # capabilities:
   #   drop:
   #   - ALL
@@ -58,12 +58,13 @@ service:
 
 ingress:
   enabled: true
-#  className: ""
-  annotations: {}
+  #  className: ""
+  annotations:
+    {}
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
-    - host:  octopub-clusterpi.octopusdemos.com
+    - host: octopub-clusterpi.octopusdemos.com
       paths:
         - path: /api/products
           pathType: Prefix
@@ -72,7 +73,8 @@ ingress:
   #    hosts:
   #      - chart-example.local
 
-resources: {}
+resources:
+  {}
   # We usually recommend not to specify default resources and to leave this as a conscious
   # choice for the user. This also increases chances charts run on environments with little
   # resources, such as Minikube. If you do want to specify resources, uncomment the following
