--- a/codefresh/application/helm/octopub-development-secret.yaml
+++ b/codefresh/application/helm/octopub-development-secret.yaml
@@ -1,18 +1,16 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: octopub-frontend-test
-  annotations:
-    codefresh.io/product: octopub-frontend
+  name: octopub-secret-development
 spec:
   project: default
   source:
-    repoURL: https://github.com/twerthi/octopub.git
-    targetRevision: HEAD
-    path: codefresh/helm/octopub-frontend/test
+     repoURL: https://github.com/twerthi/octopub.git
+     targetRevision: HEAD
+     path: codefresh/helm/octopub-secret/Development          
   destination:
     server: https://kubernetes.default.svc
-    namespace: cf-test
+    namespace: cf-development
   syncPolicy:
     automated:  
       prune: true
