--- a/codefresh/application/helm/octopub-development-helm-product.yaml
+++ b/codefresh/application/helm/octopub-development-helm-product.yaml
@@ -6,10 +6,10 @@ metadata:
     codefresh.io/product: octopub-product
 spec:
   project: default
-  sources:
-    - repoURL: https://github.com/twerthi/octopub.git
-      targetRevision: HEAD
-      path: codefresh/helm/octopub-products-mysql/development
+  source:
+     repoURL: https://github.com/twerthi/octopub.git
+     targetRevision: HEAD
+     path: codefresh/helm/octopub-products-mysql/development
   destination:
     server: https://kubernetes.default.svc
     namespace: cf-development
