--- a/codefresh/application/helm/octopub-production-helm-audit.yaml
+++ b/codefresh/application/helm/octopub-production-helm-audit.yaml
@@ -6,13 +6,10 @@ metadata:
     codefresh.io/product: octopub-audit
 spec:
   project: default
-  sources:
-    - repoURL: https://github.com/twerthi/octopub.git
-      targetRevision: HEAD
-      path: codefresh/helm/octopub-audits-mysql/production
-    - repoURL: https://github.com/twerthi/octopub.git
-      targetRevision: HEAD
-      path: codefresh/helm/octopub-secret/Production          
+  source:
+     repoURL: https://github.com/twerthi/octopub.git
+     targetRevision: HEAD
+     path: codefresh/helm/octopub-audits-mysql/production
   destination:
     server: https://kubernetes.default.svc
     namespace: cf-production
