--- a/codefresh/application/helm/octopub-test-secret.yaml
+++ b/codefresh/application/helm/octopub-test-secret.yaml
@@ -1,15 +1,13 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: octopub-frontend-test
-  annotations:
-    codefresh.io/product: octopub-frontend
+  name: octopub-secret-test
 spec:
   project: default
   source:
-    repoURL: https://github.com/twerthi/octopub.git
-    targetRevision: HEAD
-    path: codefresh/helm/octopub-frontend/test
+     repoURL: https://github.com/twerthi/octopub.git
+     targetRevision: HEAD
+     path: codefresh/helm/octopub-secret/Test          
   destination:
     server: https://kubernetes.default.svc
     namespace: cf-test
