Testing new version

--- a/codefresh/helm/octopub-frontend/development/values.yaml
+++ b/codefresh/helm/octopub-frontend/development/values.yaml
@@ -18,12 +18,10 @@ customBackgroundColor: ""
 customPaperColor: ""
 
 image:
-  #repository: twerthi/octopub-frontend
-  repository: octopussamples/octopub-frontend
+  repository: twerthi/octopub-frontend
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  #tag: "2025.04.07.45"
-  tag: "20250409.402.1-update-build"
+  tag: "2025.04.07.45"
 
 network:
   port: 8080
