--- a/github/java-microservice/action.yaml
+++ b/github/java-microservice/action.yaml
@@ -181,7 +181,7 @@ runs:
     - name: report image by action
       with:
         # Name of runtime to implement the enrichment
-        CF_RUNTIME_NAME: 'codefresh-local'
+        CF_RUNTIME_NAME: 'codefresh-local-k3s'
 
         # Codefresh API key !! Committing a plain text token is a security risk. We highly recommend using encrypted secrets. !!
         # Documentation - https://docs.github.com/en/actions/security-guides/encrypted-secrets
