Testing replacement capabilities

--- a/helm/octopub-frontend/values-octopus.yaml
+++ b/helm/octopub-frontend/values-octopus.yaml
@@ -1,1 +1,4 @@
 replicaCount: #{Project.Helm.ReplicaCount}
+image:
+  repository: #{Octopus.Action.Package[octopub-frontend].PackageId}
+  tag: #{Octopus.Action.Package[octopub-frontend].PackageVersion}
