--- a/manifests/input-templates/octopub-products-mysql.yaml
+++ b/manifests/input-templates/octopub-products-mysql.yaml
@@ -29,7 +29,7 @@ spec:
             - name: DATABASE_PORT
               value: "#{MySQL.Server.Port}"
             - name: DATABASE_NAME
-              value: "octopub_#{Octopus.Environment.Name}"
+              value: "octopub_clusterpi_#{Octopus.Environment.Name}"
             - name: DATABASE_USERNAME
               valueFrom:
                 secretKeyRef:
