Updated Manifests with Release: 2025.12.24.1
Project: update-manifests-demo
Environment: development

--- a/manifests/environments/development/octopub-frontend.yaml
+++ b/manifests/environments/development/octopub-frontend.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: web
-          image: octopussamples/octopub-frontend
+          image: index.docker.io/twerthi/octopub-frontend:2025.11.09.55
           ports:
             - containerPort: 8080
-              name: #{TestVar}
+              name: frontend
