--- a/manifests/environments/development/octopub-audits-mysql.yaml
+++ b/manifests/environments/development/octopub-audits-mysql.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: auditservice
-          image: octopussamples/octopub-audit-microservice-mysql
+          image: index.docker.io/twerthi/octopub-audit-microservice-mysql:2025.11.09.50
           ports:
             - name: http-audit
               containerPort: 10000
@@ -29,7 +29,7 @@ spec:
             - name: DATABASE_PORT
               value: "30000"
             - name: DATABASE_NAME
-              value: "octopub_Development"
+              value: "octopub_clusterpi_Development"
             - name: DATABASE_USERNAME
               valueFrom:
                 secretKeyRef:
