Forgot the git_ref

--- a/.github/workflows/ephemeral-environments.yaml
+++ b/.github/workflows/ephemeral-environments.yaml
@@ -33,6 +33,7 @@ jobs:
           server: ${{ secrets.LOCAL_OCTOPUS_SERVER_URL }}
           api_key: ${{ secrets.LOCAL_OCTOPUS_API_KEY }}
           space: 'Default'
+          git_ref: ${{ github.ref }}
 
       - name: Deploy a release in Octopus Deploy 🐙
         id: deploy_a_release_in_octopus_deploy
